[package]
name = "packet-capture"
version = "0.1.0"
authors = ["arayaryoma <r1o.ryoma.abe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.6.1"

[dependencies.pnet]
version = "0.26.0"